<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/exampleView"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_ok_dialog"
        android:layout_alignParentEnd="true" />



        <Button
            android:id="@+id/btn_ok_dialog"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@color/DeepSkyBlue"
            android:textColor="#ffffffff"
            android:text= "@string/OK"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp" />


</RelativeLayout>
